@@ -80,6 +80,7 @@ Ed Jackson
 Erik Ronström
 Fernando Pablo Lopez-Lezcano
 Gilles Sadowski
+Pothárn Imre
 Jack O'Quin
 Jeff Smith
 Johannes Schindelin
