@@ -561,9 +561,13 @@ PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 %(preamble_string)s
 
 
-%% ********************************
+
+
+
+
+%% ****************************************************************
 %% Start cut-&-pastable-section 
-%% ********************************
+%% ****************************************************************
 
 \paper {
   #(define dump-extents #t)
@@ -579,16 +583,32 @@ PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 FRAGMENT_LY = r'''
 %(notes_string)s
 {
+
+
+%% ****************************************************************
 %% ly snippet contents follows:
+%% ****************************************************************
 %(code)s
+
+
+%% ****************************************************************
 %% end ly snippet
+%% ****************************************************************
 }
 '''
 
 FULL_LY = '''
+
+
+%% ****************************************************************
 %% ly snippet:
+%% ****************************************************************
 %(code)s
+
+
+%% ****************************************************************
 %% end ly snippet
+%% ****************************************************************
 '''
 
 texinfo_linewidths = {
@@ -1034,10 +1054,10 @@ class Lilypond_snippet (Snippet):
 			if VERBATIM in self.option_dict:
 				verb = self.substring ('code')
 				str += (output[LATEX][VERBATIM] % vars ())
-			if QUOTE in self.option_dict:
-				str = output[LATEX][QUOTE] % vars ()
 
 		str += (output[LATEX][OUTPUT] % vars ())
+		if QUOTE in self.option_dict:
+			str = output[LATEX][QUOTE] % vars ()
 		return str
 
 	def output_print_filename (self, format):
